[Fix bug 896469] Add thimble logo back to header, adjust spacing, fix some overrides

--- a/public/stylesheets/userbar-overrides.less
+++ b/public/stylesheets/userbar-overrides.less
@@ -2,3 +2,12 @@
   position: relative;
   z-index: 5;
 }
+
+.webmaker-nav-container {
+  background: #FFF;
+  border-bottom: 1px solid #DDD;
+}
+
+.user-info {
+  margin-top: 10px;
+}
